    (closes: #533802).

  [ Thomas Weber ]
  * New upstream release (closes: #541036)
  * New patch: dont_pass_ldflags_to_magickconfig: don't pass magickconfig's
    ldflags into MAGICK_LIBS (closes: #535080)
  * Bump standards version to 3.8.2, no changes needed
  * Add ${misc:Depends} to all Depends: lines in debian/in/control, thanks
    lintian.

 -- Rafael Laboissiere <rafael@debian.org>  Sat, 20 Jun 2009 19:16:45 +0200

octave3.2 (3.2.0-2) unstable; urgency=low

  * debian/patches/complex-nan-print.diff: New patch for fixing the
    problem in mips and mipsel about printing the value of
    'complex(NaN,0)'.  This was causing the package to FTBFS when running
    the test of function log2 in data.cc (closes: #532656).

 -- Rafael Laboissiere <rafael@debian.org>  Mon, 15 Jun 2009 12:56:53 +0200

octave3.2 (3.2.0-1) unstable; urgency=low

  * New upstream release
  * debian/in/PACKAGE.postinst: Remove an old hack added in the code of
    the package database rebuild.  This was added for debugging purposes
    on some autobuilders and is not necessary anymore.
  * debian/copyright:
    + Update the release years in the upstream copyright notice
    + This file is moved from debian/in/copyright.  There is no need for
      keeping the file in debian/in/ because there is no version-specific
      changes in it.
  * debian/rules:
    + Do not generate debian/copyright from the file in debian/in/
    + In this new upstream version, doc/conf.texi is not distribute in the
      tarball.  Include it optionally in the savefiles list, accordingly.
    + (make-arch): Explicitly build the doc/conf.texi file
  * debian/in/control: Fix minimal version of octave-optiminterp in the
    Breaks field

 -- Rafael Laboissiere <rafael@debian.org>  Sat, 06 Jun 2009 21:59:49 +0200

octave3.2 (3.2.0~rc5-1) experimental; urgency=low

  * New upstream release candidate

 -- Rafael Laboissiere <rafael@debian.org>  Tue, 02 Jun 2009 15:52:41 +0200
